facet-styx/src/snapshots/facet_styx__tag_events_test__01_bare_at.snap
---
source: facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @\")"
---
FieldKey(Some("x"))
Scalar(Unit)
