facet-styx/src/snapshots/facet_styx__tag_events_test__02_unit_tag.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo\")"
---
FieldKey("x")
VariantTag("Foo")
Scalar(Unit)
