facet-styx/src/snapshots/facet_styx__tag_events_test__03_tag_explicit_null.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo@\")"
---
FieldKey(Some("x"))
VariantTag("Foo@")
Scalar(Unit)
