facet-styx/src/snapshots/facet_styx__tag_events_test__04_tag_sequence.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo(a b)\")"
---
FieldKey("x")
VariantTag("Foo")
SequenceStart
  Scalar("a")
  Scalar("b")
SequenceEnd
