facet-styx/src/snapshots/facet_styx__tag_events_test__05_tag_struct.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"y @Foo{x 1}\")"
---
FieldKey("y")
VariantTag("Foo")
StructStart
  FieldKey("x")
  Scalar(1)
StructEnd
