facet-styx/src/snapshots/facet_styx__tag_events_test__06_nested_unit_tags.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo(@Bar)\")"
---
FieldKey("x")
VariantTag("Foo")
SequenceStart
  VariantTag("Bar")
  Scalar(Unit)
SequenceEnd
