facet-styx/src/snapshots/facet_styx__tag_events_test__07_tag_struct_with_tag_value.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"y @Foo{x @Bar}\")"
---
FieldKey("y")
VariantTag("Foo")
StructStart
  FieldKey("x")
  VariantTag("Bar")
  Scalar(Unit)
StructEnd
