facet-styx/src/snapshots/facet_styx__tag_events_test__08_field_unit_tag.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo\")"
---
FieldKey(Some("x"))
VariantTag("Foo")
Scalar(Unit)
