facet-styx/src/snapshots/facet_styx__tag_events_test__09_field_struct_tag.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x @Foo{y 1}\")"
---
FieldKey(Some("x"))
VariantTag("Foo")
StructStart
  FieldKey(Some("y"))
  Scalar("1")
StructEnd
