facet-styx/src/snapshots/facet_styx__tag_events_test__10_sequence_unit_tags.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"x (@Foo @Bar)\")"
---
FieldKey("x")
SequenceStart
  VariantTag("Foo")
  Scalar(Unit)
  VariantTag("Bar")
  Scalar(Unit)
SequenceEnd
