facet-styx/src/snapshots/facet_styx__tag_events_test__11_deeply_nested.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"y @Foo(@Bar{x 1})\")"
---
FieldKey("y")
VariantTag("Foo")
SequenceStart
  VariantTag("Bar")
  StructStart
    FieldKey("x")
    Scalar(1)
  StructEnd
SequenceEnd
