facet-styx/src/snapshots/facet_styx__tag_events_test__12_at_as_key.snap
---
source: crates/facet-styx/src/tag_events_test.rs
expression: "collect_events(\"@ {x 1}\")"
---
FieldKey(None)
StructStart
  FieldKey(Some("x"))
  Scalar("1")
StructEnd
